--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,3 +8,13 @@ myPostgresDB = {
   }
   numThreads = 10
 }
+
+mySqlDb = {
+  url = "jdbc:mysql://localhost/shivangi"
+  user="root"
+  password="root"
+  driver = com.mysql.jdbc.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+
+}
